src/Jurors/jurors.css
.jury-box {
  margin: 20px 20px 20px 20px;
  padding: 50px 5px;
  border: 10px double black;
  border-radius: 3px;
  background-color: #936340;
  height: auto;
}

h2 {
  padding: 0;
  margin: 1px 0;
}

.clickableBlackmail {
  border: 1px solid red;
  padding: 2px 0;
}

.nonClickableBlackmail {
  border: 1px solid red;
  padding: 2px 0;
  opacity: 0.5;
  text-decoration: line-through;
}

.jurors {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.jurorButton {
  padding-top: 2px;
}

.juror-name {
  margin-bottom: 10px;
}

.juror {
  background-color: #996247;
  border: 10px double black;
  display: inline-block;
  padding: 10px 0 0 0;
  margin: 5px;
  width: 100px;
  width: 100px;
}

.jury-box img {
  padding: 0;
  margin: 0;
  width: 50px;
  height: 50px;
}

